<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="416dp"
                    android:layout_height="133dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gradient_login" />

                <TextView
                    android:id="@+id/farsabook_logo_text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="24dp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowRadius="3"
                    android:text="Farsabook"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tip_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="84dp"
                    android:shadowColor="#000000"
                    android:shadowDx="5"
                    android:shadowRadius="3"
                    android:text="Modifica la password"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.065"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="17dp" />


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="17dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/username_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/usernameString"
                            android:textColor="#000"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/username_show"
                            android:layout_width="298dp"
                            android:layout_height="wrap_content"

                            android:gravity="right"
                            android:text="@string/usernameShowString"
                            android:textColor="#000"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/password_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/passwordString"
                            android:textColor="#000"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/password_show"
                            android:layout_width="301dp"
                            android:layout_height="wrap_content"

                            android:gravity="right"
                            android:text="@string/passwordShowString"
                            android:textColor="#000"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Nuova password"
                        android:textColor="#000"
                        android:textSize="22dp" />

                    <EditText
                        android:id="@+id/new_pass_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Conferma nuova password"
                        android:textColor="#000"
                        android:inputType="textPassword"

                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Password"
                        android:textColor="#000"
                        android:textSize="22sp" />

                    <EditText
                        android:id="@+id/new_pass_input_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Inserire password"
                        android:inputType="textPassword"
                        android:textColor="#000"

                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/update_password"
                            android:layout_width="232dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Aggiorna password"
                            android:textColorLink="#DD3737"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/home_button"
                            android:layout_width="140dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Torna alla Home"
                            android:textColorLink="#DD3737"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="29dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>